# ai-trade-manager

./: .dockerignore  .env.example  .env.local.example  .gitignore  Agents.md  Dockerfile  Dockerfile.local  README.md  alembic.ini  docker-compose-dev.yml  docker-compose.local.yml  pyproject.toml  requirements.txt  start_dev.bat  stop_dev.bat  test_chat_sessions.py  test_gemini_opensearch_rag.py  test_ticker.py  test_upbit.py
app/: main.py
app/api/: dependencies.py  router.py
app/core/: config.py  logging.py  scheduler.py
app/db/: repository.py  session.py
app/models/: __init__.py  domain.py  schemas.py
app/schemas/: favorite.py  portfolio.py
app/services/: bot_service.py  news_analyzer.py  news_scraper.py  slack.py  slack_blocks.py  slack_bot.py  slack_socket.py  telegram.py  telegram_bot.py  upbit_client.py
docs/: API_REFERENCE.ko.md  ARCHITECTURE.ko.md  ARCHITECTURE.md  DATABASE.md  DEVELOPMENT_WORKFLOW.md  IDE_AGENT_CHAT_PROMPT_TEMPLATE.md  OPERATIONS.md  PROJECT_STATE.ko.md  SLACK_SETUP.ko.md  v1-spec.ko.md  v1-spec.md
frontend/: Dockerfile.local  index.html  package-lock.json  package.json  vite.config.ts
migrations/: env.py
tests/: test_admin_auth.py  test_ai_buy_precheck.py  test_ai_cycle_binding.py  test_ai_executor_safety.py  test_ai_manual_cycle.py  test_ai_policy_backtest.py  test_ai_provider_router.py  test_dashboard_resilience.py  test_portfolio_briefing.py  test_portfolio_error_mapping.py  test_slack_bot.py  test_slack_portfolio_alert_scheduler.py  test_trading_engine_stop.py
trading_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+150 files in other folders)
