[project]
name = "ai-trade-manager"
version = "0.1.0"
description = "Upbit KRW spot trading bot (FastAPI)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy[asyncio]>=2.0.28",
  "asyncpg>=0.29.0",
  "alembic>=1.13.1",
  "httpx>=0.27",
  "websockets>=12.0",
  "python-dotenv>=1.0",
  "PyJWT>=2.8",
  "slack-sdk>=3.27",
  "aiohttp>=3.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.3"
]

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["logs*", "tests*"]
